Fix navbar scroll overflow (#312)

--- a/app/styles/components/navbar.scss
+++ b/app/styles/components/navbar.scss
@@ -15,6 +15,7 @@
 
 .navbar-nav {
   overflow-x: scroll;
+  overflow-y: hidden;
   height: calc(100% + 20px);
   min-height: calc(100% + 20px);
 }
